<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_reminders"
            android:title="@string/reminders" />
        <item
            android:id="@+id/nav_label"
            android:title="@string/create_new_notes" />
        <item
            android:id="@+id/nav_archive"
            android:title="@string/archive" />
        <item
            android:id="@+id/nav_deleted"
            android:title="@string/deleted" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/help_amp_feedback" />


    </group>


</menu>
